<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:text="@string/seu_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvTitulo" android:gravity="center"
            android:textSize="21sp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:hint="@string/email_contato" android:id="@+id/etEmailUsuario"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/nova_senha" android:id="@+id/etSenhaUsuario"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>