<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardCornerRadius="2dp"
                                    app:cardElevation="3dp"
                                    app:cardPreventCornerOverlap="true"
                                    app:cardUseCompatPadding="true">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:padding="8dp">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/nome_do_contato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvNome"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/email_contato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvDescricaoEmail"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvEmail"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/telefone_contato"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/tvTelefone"/>
        </TableRow>
    </TableLayout>
</android.support.v7.widget.CardView>